footer, responsive, spacing and home page fixes

--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -77,6 +77,11 @@ select {color:#0D2131; font:bold 13px "Archivo Narrow", san-serif; background:#F
 .btn-primary:focus,
 .btn-primary:active {background:#A62924;}
 
+/* Sticky Footer */
+body {display:flex; flex-direction:column; /*border:5px solid red;*/}
+main {flex:1 0 auto;}
+footer {flex-shrink:0;}
+
 
 /* Header */
 header .navbar-container {min-height:151px; transition:max-height 200ms linear;}
@@ -114,7 +119,7 @@ body.scrolled header nav .navbar-toggler + .navbar-collapse {background:none; ba
 /* Banner */
 #banner {position:relative; height:50px;}
 #banner .banner-overlay1 {position:absolute; z-index:1; bottom:8px; width:100%; height:40px; background:url(/_includes/assets/img/bg-banner-overlay1.png) no-repeat top center; background-size:100% 40px;}
-#banner .banner-overlay2 {position:absolute; z-index:3; bottom:-2px; width:100%; height:30px; background:url(/_includes/assets/img/bg-banner-overlay2.png) no-repeat top center; background-size:100% 30px;}
+#banner .banner-overlay2 {position:absolute; z-index:3; bottom:-3px; width:100%; height:30px; background:url(/_includes/assets/img/bg-banner-overlay2.png) no-repeat top center; background-size:100% 30px;}
 #banner .slider {position:relative; top:2px; z-index:2;}
 #banner .slider img {width:100%;}
 #banner .slider #prev,
@@ -136,7 +141,7 @@ body.scrolled header nav .navbar-toggler + .navbar-collapse {background:none; ba
 
 
 /* Content */
-#content {background:#FFF; padding:30px 0 50px 0;}
+#content {background:#FFF; padding:30px 0;}
 #content .row.end {margin-bottom:50px;}
 #content img.padding {margin:0 20px 20px 0;}
 #content img.padding.right {margin:0 0 20px 20px;}
@@ -162,15 +167,11 @@ body.scrolled header nav .navbar-toggler + .navbar-collapse {background:none; ba
 footer #footer-top {background:#DBDBDB;}
 footer #footer-top h4 {margin-bottom:10px; font-size:30px; font-weight:bold;}
 footer #footer-top .form {color:#FFF; background:#0C3657; border-radius:3px 3px 0 0; padding:20px 25px; -webkit-box-shadow:inset 0 0 50px 0 rgba(0, 0, 0, 0.40); box-shadow:inset 0 0 50px 0 rgba(0, 0, 0, 0.40);}
-footer #footer-top .form span {display:block;}
 footer #footer-top .form .top {position:relative; z-index:3; color:#A8C4DA; font:32px "Blackjack", san-serif;}
-footer #footer-top .form .bot {position:relative; top:-8px; z-index:2; color:#FFF; font:bold 28px "Archivo Narrow", san-serif; text-transform:uppercase;}
-footer #footer-top .form .submit {text-align:center; margin-top:16px;}
-footer #footer-top .form .submit input {margin:0;}
+footer #footer-top .form .bot {position:relative; z-index:2; color:#FFF; font:bold 28px "Archivo Narrow", san-serif; text-transform:uppercase;}
 footer #footer-top .form textarea {max-height:200px;}
 footer #footer-top .form input,
 footer #footer-top .form textarea {border:0;}
-footer #footer-top .form input {margin-bottom:12px;}
 footer #footer-top .form input[type=text],
 footer #footer-top .form input[type=email],
 footer #footer-top .form input[type=tel],
@@ -179,8 +180,6 @@ footer #footer-top .form input[type=text]:focus,
 footer #footer-top .form input[type=text]:active,
 footer #footer-top .form textarea:focus,
 footer #footer-top .form textarea:active {background:#7AA2C3;}
-footer #footer-top .form .col-sm-6:nth-child(2n) {padding-left:5px;}
-footer #footer-top .form .col-sm-6:nth-child(2n+1) {padding-right:5px;}
 
 footer #footer-bottom {background:#E6E6E6; color:#0D3657; font-family:'Archivo Narrow', san-serif; font-weight:700; letter-spacing:1px;}
 footer #footer-bottom a {color:#0D5793;}
@@ -194,8 +193,8 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 
 #page-home #content .text1,
 #page-home #content .text2 {text-shadow:3px 3px 0 rgba(0, 0, 0, 0.20);}
-#page-home #content .text1 {position:relative; z-index:3; color:#0063B3; font:62px "Blackjack", san-serif; letter-spacing: 2.3px; margin-bottom:-15px;}
-#page-home #content .text2 {position:relative; z-index:2; color:#003865; font:bold 72px "Archivo Narrow", san-serif; text-transform:uppercase; letter-spacing:-5px;}
+#page-home #content .text1 {position:relative; z-index:3; color:#0063B3; font:55px "Blackjack", san-serif; letter-spacing:2.3px;}
+#page-home #content .text2 {position:relative; z-index:2; color:#003865; font:72px "Archivo Narrow", san-serif; letter-spacing:-2px; font-weight:bold; text-transform:uppercase;}
 
 
 /* Testimonials */
@@ -290,13 +289,14 @@ footer #footer-bottom .fa-circle {color:#BB312B; font-size:8px; position:relativ
 
 /* Small (sm) and up*/
 @media (min-width:576px) {
-
+	#page-home #content .text1 {font-size:62px; margin-bottom:-15px;}
+	#page-home #content .text2 {font-size:72px;}
 }
 
 
 /* Medium (md) and up */
 @media (min-width:768px) {
-
+	#content {padding:30px 0 50px 0;}
 }
 
 
